testsuite/tests/parser/should_fail/patFail005.hs
module PatFail005 where

f (do a; b; c) = _
