testsuite/tests/parser/should_fail/patFail005.stderr

patFail005.hs:3:4: error: [GHC-06446] do-notation in pattern
